--- a/CHANGES
+++ b/CHANGES
@@ -382,6 +382,15 @@ PQ.copytools = {'xrdcp': {'setup':''}, 'lsm': {'setup':''} }
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+65.6:
+
+User job setup:
+- Updated getCacheInfo() to handle AtlasDerivation nightlies for user jobs (ATLASExperiment)
+- Removed outdated code for release 13.0.25 from getCacheInfo() (ATLASExperiment)
+- Updated getJobExecutionCommand() to setup user jobs with atlasLocalSetup() (ATLASExperiment)
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 TODO:
 
 OS log transfers:
