Absolute PFC PFN paths

--- a/CHANGES
+++ b/CHANGES
@@ -391,6 +391,14 @@ User job setup:
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+65.7:
+
+PoolFileCatalog updates:
+- Removing any paths from filenames in verifyPFCIntegrity() (Mover)
+- Setting absolute path for guidfname[guid] in mover_get_data() and _mover_get_data_new() (Mover)
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 TODO:
 
 OS log transfers:
