Looping job killer update

--- a/CHANGES
+++ b/CHANGES
@@ -487,6 +487,14 @@ M movers/mover.py (21)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+65.8:
+
+Looping job killer update:
+- Updated __loopingJobKiller() to ignore file name patterns 'memory_' and 'mem.'. Previously, the pilot only ignore 'memory_monitor' patterns (Monitor)
+- Discussed in JIRA ticket https://its.cern.ch/jira/browse/ATLASPANDA-281
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 TODO:
 
 OS log transfers:
