--- a/CHANGES
+++ b/CHANGES
@@ -523,6 +523,40 @@ M PandaServerClient.py (19)
 M RunJobEvent.py (14)
 M RunJobUtilities.py (2)
 
+Updates from Wen Guan (3):
+
+Commit Summary
+
+define event service error code because of over subscribed events
+define event service error code because of no available events
+remove agis overrides in pilot
+
+File Changes
+
+M ATLASSiteInformation.py (72)
+M PilotErrors.py (6)
+
+Updates from Wen Guan (4):
+
+Commit Summary
+
+add new objectstore sitemover
+fix pilot to handle errors in priority error report
+report over subscribe events error in RunJobHPCEvent
+define message server error and objectstore setup error
+reorganize pilot errors
+fix runjobevent to use the new site mover
+remove space
+
+File Changes
+
+M PilotErrors.py (6)
+M RunJobEvent.py (34)
+M RunJobHpcEvent.py (10)
+M UpdateHandler.py (8)
+A movers/objectstore_sitemover.py (29)
+M movers/sitemovers.py (1)
+
 Updates from Taylor Childers:
 
 -   Added code to write a file named batchid.<batchid>.txt to disk after the batch job is submitted so one does not have to scour the logs to find the id.
