--- a/CHANGES
+++ b/CHANGES
@@ -155,6 +155,30 @@ M movers/mover.py (29)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+66.1:
+
+Updates from Wen Guan:
+
+  https://github.com/PanDAWMS/pilot/pull/62
+
+Commit Summary
+
+avoid schedule same jobs to same ranks
+Yoda to use gmtime
+test new mover
+fix job corecount of es on single core situation
+fix merge conflicts
+
+File Changes
+
+M ATLASSiteInformation.py (1)
+M HPC/EventServer/Logger.py (2)
+M HPC/Logger.py (4)
+M HPC/pandayoda/yodacore/Yoda.py (16)
+M RunJobEvent.py (1)
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 TODO:
 
 OS log transfers:
