--- a/CHANGES
+++ b/CHANGES
@@ -236,6 +236,13 @@ M pilot.py (16)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+66.2:
+
+General changes:
+
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 TODO:
 
 OS log transfers:
