--- a/CHANGES
+++ b/CHANGES
@@ -308,6 +308,18 @@ M UpdateHandler.py (4)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+66.3:
+
+Updates from Alexey Anisenkov:
+
+various small sitemover updates:
+- movers: base remote_cleanup handler added (fixed lcgcp clean up action)
+- fixed getSURL() to avoid transfers to non deterministic sites (quick hack for now based on checking '/rucio' postfix)
+- changed sitemover timeout threshold to fixed 1h value
+- various cosmetic fixes
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 TODO:
 
 OS log transfers:
