--- a/CHANGES
+++ b/CHANGES
@@ -341,6 +341,24 @@ M movers/mover.py (263)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+66.4:
+
+Updates from Alexey Anisenkov:
+
+  https://github.com/PanDAWMS/pilot/pull/74
+
+Commit Summary
+
+mover: check space size workflow cosmetic
+Merge branch 'main-dev' of https://github.com/PanDAWMS/pilot into main-dev
+
+File Changes
+
+M movers/mover.py (6)
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+
 TODO:
 
 OS log transfers:
