--- a/CHANGES
+++ b/CHANGES
@@ -417,6 +417,13 @@ M RunJobEvent.py (1)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+66.5:
+
+General updates:
+
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 
 TODO:
 
