--- a/CHANGES
+++ b/CHANGES
@@ -470,6 +470,8 @@ File Changes
 
 A movers/mv_mover.py (71)
 
+Updates from Wen Guan:
+
   https://github.com/PanDAWMS/pilot/pull/79
 
 Commit Summary
