--- a/CHANGES
+++ b/CHANGES
@@ -505,6 +505,28 @@ M RunJobHpcEvent.py (5)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+66.6:
+
+General updates:
+
+- Created __check_remaining_proxy() which is called every five minutes from monitor_job() and monitor_recovery_job() te ensure there is at least ten minutes left of the proxy (Monitor)
+
+Updates from Wen Guan:
+
+  https://github.com/PanDAWMS/pilot/pull/82
+
+Commit Summary
+
+To suppport s3+rucio
+Fixed bug
+
+File Changes
+
+M RunJobHpcEvent.py (2)
+M objectstoreSiteMover.py (2)
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 
 TODO:
 
