--- a/CHANGES
+++ b/CHANGES
@@ -505,7 +505,7 @@ M RunJobHpcEvent.py (5)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
-66.6:
+67.0:
 
 General updates:
 
@@ -594,6 +594,19 @@ File Changes
 
 R movers/mv_sitemover.py (38)
 M movers/sitemovers.py (1)
+
+Updates from Mario Lassnig:
+
+  https://github.com/PanDAWMS/pilot/pull/87
+
+Commit Summary
+
+storm: file protocol sitemover using webdav etags
+
+File Changes
+
+M movers/sitemovers.py (1)
+A movers/storm_sitemover.py (125)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
